--- a/about.html
+++ b/about.html
@@ -70,10 +70,10 @@
 				<li><b>Bachelor of Computer Science (Computer Security)</b> – National Defence University of Malaysia</li>
 				<li><b>Creative Media Entrepreneur Certificate</b> – PERHEBAT</li>
 				<li><b>Adobe Photoshop & Illustrator Certificate</b> – VIXMATECH Computer Training Centre</li>
-				<li><b>Scored A in Visual Arts (Pend Seni Visual)</b> at MRSM Kuantan in SPM, reflecting her early creative talent</li>
+				<li><b>Scored A in Visual Arts (Pend Seni Visual)</b> at MRSM Kuantan in SPM, reflecting my early creative talent</li>
 			</ul>
 
-			<p><b>Military Experience:</b></p>
+			<p><b>Working Experience:</b></p>
 			<ul class="square">
 				<li>Served from <b>2015 to 2025</b> in the <b>Royal Signal Corps</b></li>
 				<li>Retired as <b>Captain</b>, responsible for the Army’s communication and technology systems</li>
