--- a/work.html
+++ b/work.html
@@ -268,6 +268,24 @@
 						<h2>Wish Cards</h2>
 					</a>
 				</div>
+				<div class="fh5co-project masonry-brick">
+					<a>
+						<img src="images/Portfolio/Hand Drawing.jpeg" alt="">
+						<h2>Hand Drawing</h2>
+					</a>
+				</div>
+				<div class="fh5co-project masonry-brick">
+					<a>
+						<img src="images/Portfolio/Hand Drawing 2.jpeg" alt="">
+						<h2>Hand Drawing</h2>
+					</a>
+				</div>
+				<div class="fh5co-project masonry-brick">
+					<a>
+						<img src="images/Portfolio/Hand Drawing 3.jpeg" alt="">
+						<h2>Hand Drawing</h2>
+					</a>
+				</div>
 			</div>
 			<!--END .fh5co-projects-feed-->
 		</div>
