--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<li><b>Bachelor of Computer Science (Computer Security)</b> – National Defence University of Malaysia</li>
 				<li><b>Creative Media Entrepreneur Certificate</b> – PERHEBAT</li>
 				<li><b>Adobe Photoshop & Illustrator Certificate</b> – VIXMATECH Computer Training Centre</li>
-				<li><b>Scored A in Visual Arts (Pend Seni Visual)</b> at MRSM Kuantan in SPM, reflecting her early creative talent</li>
+				<li><b>Scored A in Visual Arts (Pend Seni Visual)</b> at MRSM Kuantan in SPM, reflecting my early creative talent</li>
 			</ul>
 
 			<p><b>Military Experience:</b></p>
