--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<li><b>Scored A in Visual Arts (Pend Seni Visual)</b> at MRSM Kuantan in SPM, reflecting my early creative talent</li>
 			</ul>
 
-			<p><b>Military Experience:</b></p>
+			<p><b>Working Experience:</b></p>
 			<ul class="square">
 				<li>Served from <b>2015 to 2025</b> in the <b>Royal Signal Corps</b></li>
 				<li>Retired as <b>Captain</b>, responsible for the Army’s communication and technology systems</li>
